# OpenGPU

./: .gitignore  README.md
bash_scripts/: gpu_env.sh
gpu-detect/: Cargo.toml
gpu-detect/src/: detect.rs  driver_install.rs  main.rs  system_check.rs
infra_training/: Dockerfile  infra_learning.py  rag_learning.py  requirements.txt  sre_rag_finetuning.py  training_loader.py
infra_training/rag_vectors/: vectors.faiss
infra_training/sre_outputs/fine_tuned_model/: adapter_config.json
infra_training/sre_outputs/fine_tuned_model/checkpoint-3/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
infra_training/training_data/: k8s_set.md  sre_advanced.json  sre_architecture_qa.md  sre_basic_training.json  sre_conversations.md  sre_debug_tips.jsonl  sre_k8s_troubleshooting.md
